--- a/daemon/src/plug-in/Makefile.am
+++ b/daemon/src/plug-in/Makefile.am
@@ -6,5 +6,7 @@ noinst_LTLIBRARIES = libplugin.la
 
 libplugin_la_SOURCES = \
 		pluginmanager.cpp \
-		librarymanager.cpp
+		librarymanager.cpp \
+		pluginmanager.h librarymanager.h plugin.h
 
+libplugin_la_CXXFLAGS = -I $(top_srcdir)/src/plug-in
