--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -21,5 +21,14 @@ endif
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = libs src ringtones man $(TESTS_DIR) doc
 
-EXTRA_DIST = m4/*.m4 images/* README.gentoo
-
+EXTRA_DIST = README.gentoo \
+			 m4/libtool.m4 \
+			 m4/lt~obsolete.m4 \
+			 m4/ltoptions.m4 \
+			 m4/ltsugar.m4 \
+			 m4/ltversion.m4 \
+			 images/logo_ico.png \
+			 images/sfl-logo.png \
+			 images/sflphone_logo.png \
+			 images/sflphone.png \
+			 images/tray-icon.png
