--- a/gnome/src/icons/Makefile.am
+++ b/gnome/src/icons/Makefile.am
@@ -2,12 +2,9 @@ include ../../globals.mak
 
 noinst_LTLIBRARIES = libicons.la
 
-libicons_la_SOURCES = \
-  icon_factory.c
-
-noinst_libicons_la_HEADER= \
-	icon_factory.h	\
-	pixmaps_data.h
+libicons_la_SOURCES = icon_factory.c \
+					  icon_factory.h \
+					  pixmap_data.h
 
 libicons_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) \
 			$(SFLGTK_LDFLAGS) $(SFLGLIB_LDFLAGS) $(WEBKIT_LDFLAGS) $(LIBGNOMEUI_LDFLAGS) \
