* #6714: fixed make distcheck for sflphone-plugins

--- a/plugins/addressbook/evolution/Makefile.am
+++ b/plugins/addressbook/evolution/Makefile.am
@@ -2,7 +2,7 @@ include ../../globals.mak
 
 noinst_PROGRAMS = libevladdrbook.so
 
-libevladdrbook_so_SOURCES = eds.c addressbook.c
+libevladdrbook_so_SOURCES = eds.c eds.h addressbook.c addressbook.h
 
 libevladdrbook_so_LDFLAGS = --shared $(SFLGLIB_LDFLAGS) $(SFLGTK_LDFLAGS) $(LIBEDATASERVER_LDFLAGS) $(LIBEDATASERVERUI_LDFLAGS) $(LIBEBOOK_LDFLAGS)
 
@@ -15,7 +15,9 @@ install-exec-local: install-libplugin_libevladdrbook_so
 uninstall-local: uninstall-libplugin_libevladdrbook_so
 
 install-libplugin_libevladdrbook_so: libevladdrbook.so
-	$(INSTALL_PROGRAM)  libevladdrbook.so $(sflplugindir)
+	mkdir -p $(sflplugindir)
+	$(INSTALL_PROGRAM) libevladdrbook.so $(sflplugindir)
 
 uninstall-libplugin_libevladdrbook_so:
 	rm -f $(sflplugindir)/libevladdrbook.so
+	rm -rf $(sflplugindir)
