gnome: rename video_preview.{c,h} into video_renderer.{c,h} and move dbus_stop_video_preview() call into videoconf.c

--- a/gnome/src/video/Makefile.am
+++ b/gnome/src/video/Makefile.am
@@ -2,7 +2,7 @@ include ../../globals.mak
 
 noinst_LTLIBRARIES = libvideo.la
 
-libvideo_la_SOURCES = video_preview.c
+libvideo_la_SOURCES = video_renderer.c
 
 libvideo_la_LDFLAGS = @CLUTTER_LDFLAGS@ @CLUTTERGTK_LDFLAGS@
 
