--- a/daemon/src/audio/Makefile.am
+++ b/daemon/src/audio/Makefile.am
@@ -14,13 +14,11 @@ libaudio_la_SOURCES = \
 		audiolayer.cpp \
 		samplerateconverter.cpp \
 		delaydetection.cpp \
-		echocancel.cpp \
 		echosuppress.cpp \
 		speexechocancel.cpp \
 		noisesuppress.cpp \
 		gaincontrol.cpp \
-		dcblocker.cpp \
-		$(SPEEX_SOURCES_CPP)
+		dcblocker.cpp
 
 noinst_HEADERS = \
 		audioloop.h \
@@ -32,7 +30,6 @@ noinst_HEADERS = \
 		audiolayer.h \
 	 	recordable.h \
 		delaydetection.h \
-		echocancel.h \
 		echosuppress.h \
 		speexechocancel.h \
 		noisesuppress.h \
