* #6860: refactor uimanager, also fixes #6865
More pervasive changes were just to fix "transfert" typo

--- a/gnome/pixmaps/Makefile.am
+++ b/gnome/pixmaps/Makefile.am
@@ -3,7 +3,7 @@ icondir   = $(datadir)/pixmaps
 icon_DATA = sflphone.svg
 
 buttons_DATA = current.svg \
-				transfert.svg \
+				transfer.svg \
 				hold.svg \
 				unhold.svg \
 				refuse.svg \
