* #5659 : addressbook doesn't use libedataserverui

--- a/plugins/addressbook/evolution/Makefile.am
+++ b/plugins/addressbook/evolution/Makefile.am
@@ -4,11 +4,11 @@ noinst_PROGRAMS = libevladdrbook.so
 
 libevladdrbook_so_SOURCES = eds.c eds.h addressbook.c addressbook.h
 
-libevladdrbook_so_LDFLAGS = --shared $(SFLGLIB_LDFLAGS) $(SFLGTK_LDFLAGS) $(LIBEDATASERVER_LDFLAGS) $(LIBEDATASERVERUI_LDFLAGS) $(LIBEBOOK_LDFLAGS)
+libevladdrbook_so_LDFLAGS = --shared $(GLIB_LDFLAGS) $(GTK_LDFLAGS) $(LIBEDATASERVER_LDFLAGS) $(LIBEBOOK_LDFLAGS)
 
-libevladdrbook_so_LDADD = $(SFLGLIB_LIBS) $(SFLGTK_LIBS) $(LIBEDATASERVER_LIBS) $(LIBEDATASERVERUI_LIBS) $(LIBEBOOK_LIBS)
-	  
-libevladdrbook_so_CFLAGS = -fPIC -g -Wall $(SFLGTK_CFLAGS) $(LIBEDATASERVER_CFLAGS) $(LIBEDATASERVERUI_CFLAGS) $(LIBEBOOK_CFLAGS) 
+libevladdrbook_so_LDADD = $(GLIB_LIBS) $(GTK_LIBS) $(LIBEDATASERVER_LIBS) $(LIBEBOOK_LIBS)
+
+libevladdrbook_so_CFLAGS = -fPIC -g -Wall $(GTK_CFLAGS) $(LIBEDATASERVER_CFLAGS) $(LIBEBOOK_CFLAGS)
 
 install-exec-local: install-libplugin_libevladdrbook_so
 
@@ -20,4 +20,4 @@ install-libplugin_libevladdrbook_so: libevladdrbook.so
 
 uninstall-libplugin_libevladdrbook_so:
 	rm -f $(sflplugindir)/libevladdrbook.so
-	rm -rf $(sflplugindir)
+	rmdir $(sflplugindir)
