--- a/plugins/configure.ac
+++ b/plugins/configure.ac
@@ -29,8 +29,8 @@ LT_INIT
 dnl GCONF utilities
 AM_GCONF_SOURCE_2
 
-PKG_CHECK_MODULES(SFLGTK, gtk+-2.0 > 2.2)
-PKG_CHECK_MODULES(SFLGLIB, glib-2.0 >= 2.2)
+PKG_CHECK_MODULES(GTK, gtk+-2.0 > 2.2)
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.2)
 PKG_CHECK_MODULES(LIBEBOOK, libebook-1.2 >= 1.4)
 PKG_CHECK_MODULES([LIBEDATASERVER], [libedataserver-1.2 >= 2.32],
         [AC_DEFINE([LIBEDATASERVER_VERSION_2_32], [], [Using libedataserver-1.2 version 2.32 or higher])],
