* #5884: Disable debug code in pjsip
work around a bug with PJ_DEBUG set / echo canceller / thread code

--- a/daemon/libs/pjproject/aconfigure.ac
+++ b/daemon/libs/pjproject/aconfigure.ac
@@ -22,11 +22,9 @@ AC_CONFIG_FILES([build.mak
 dnl
 dnl Setup default CFLAGS
 dnl
-if test "$CFLAGS" = ""; then
-  CFLAGS="-O2"
-else
-  CFLAGS="$CFLAGS"
-fi
+test "$CFLAGS" = "" && CFLAGS="-O2"
+
+CFLAGS="$CFLAGS -DNDEBUG -g" # no assertions, debug symbols
 
 CXXFLAGS="$CFLAGS $CXXFLAGS"
 
