Revert "deb: forge -g flags for pjsip"
This reverts commit 4cfad87cbe6b346c86745976bc67a0cf2d629e03.

--- a/tools/build-system/launchpad/sflphone-common/debian/rules
+++ b/tools/build-system/launchpad/sflphone-common/debian/rules
@@ -22,7 +22,7 @@ configure-stamp:
 	# Add here commands to configure the package.
 	./autogen.sh
 	./configure --prefix=/usr --without-celt
-	cd libs/pjproject; ./configure CFLAGS=-g CXXFLAGS=-g
+	cd libs/pjproject; ./configure
 	touch configure-stamp
 
 #Architecture
