* #6902: migrate to GTK3
We need GTK3 to use the recent, non-broken clutter-gtk-1.0
Completely drop GTK2 compatibility

TODO: - help dialog
      - migrate to GSettings instead of gconf (not mandatory)
      - fix runtime warnings about the dynamic toolbar (hangup buttons etc)

Fallback on cairo for video display if clutter doesn't work
Use the same rgb format for clutter and cairo renderers (BGRA)
Fix a flaw in design (client needed to tell the daemon which format it needed)

--- a/gnome/src/config/Makefile.am
+++ b/gnome/src/config/Makefile.am
@@ -27,14 +27,11 @@ libconfig_la_SOURCES = \
   utils.h \
   zrtpadvanceddialog.h
 
-libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) \
-			$(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) $(LIBGNOMEUI_LDFLAGS) \
-			$(GNOMEDOCUTILS_LDFLAGS)  @CLUTTER_LIBS@
+libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) $(GCONF_LDFLAGS) \
+			$(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) @CLUTTER_LIBS@
 
-libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBSI) \
-			$(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) $(LIBGNOMEUI_LIBS) \
-			$(GNOMEDOCUTILS_LIBS)  @CLUTTER_LIBS@
+libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) $(GCONF_LIBS) \
+			$(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) @CLUTTER_LIBS@
 
-libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
-			$(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) $(LIBGNOMEUI_CFLAGS) \
-			$(GNOMEDOCUTILS_CFLAGS) @CLUTTER_CFLAGS@
+libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) $(GCONF_CFLAGS) \
+			$(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) @CLUTTER_CFLAGS@
