--- a/gnome/tests/Makefile.am
+++ b/gnome/tests/Makefile.am
@@ -29,7 +29,7 @@ check_config_LDADD =		$(SFLPHONE_LIBS) @CHECK_LIBS@
 
 check_dbus_SOURCES =		check_dbus.c $(top_srcdir)/src/logger.c $(top_srcdir)/src/accountlist.c $(top_srcdir)/src/actions.c $(top_srcdir)/src/codeclist.c $(top_srcdir)/src/dialpad.c $(top_srcdir)/src/mainwindow.c $(top_srcdir)/src/reqaccount.c $(top_srcdir)/src/sflnotify.c $(top_srcdir)/src/sliders.c $(top_srcdir)/src/statusicon.c $(top_srcdir)/src/callable_obj.c $(top_srcdir)/src/eel-gconf-extensions.c $(top_srcdir)/src/uimanager.c $(top_srcdir)/src/conference_obj.c $(top_srcdir)/src/shortcuts.c $(top_srcdir)/src/imwindow.c
 
-check_dbus_CFLAGS = 		@CHECK_CFLAGS@ @GTK_CFLAGS@ @DBUSGLIB_CFLAGS@ @WEBKIT_CFLAGS@
-check_dbus_LDADD =			$(SFLPHONE_LIBS) @CHECK_LIBS@ $(top_builddir)/src/widget/libwidget.la $(top_builddir)/src/video/libvideo.la $(top_builddir)/src/icons/libicons.la
+check_dbus_CFLAGS = 		@CHECK_CFLAGS@ @GTK_CFLAGS@ @DBUSGLIB_CFLAGS@ @WEBKIT_CFLAGS@ $(GCONF_CFLAGS)
+check_dbus_LDADD =			$(SFLPHONE_LIBS) @CHECK_LIBS@ $(GCONF_LIBS) $(top_builddir)/src/widget/libwidget.la $(top_builddir)/src/video/libvideo.la $(top_builddir)/src/icons/libicons.la
 
 ###########################################################
