Fix daemon video tests

--- a/daemon/src/video/Makefile.am
+++ b/daemon/src/video/Makefile.am
@@ -21,4 +21,4 @@ ffmpeg2rtp_SOURCES=ffmpeg2rtp.cpp -I .
 ffmpeg2rtp_LDADD=@LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@ libvideo.la $(top_builddir)/src/libsflphone.la @CCRTP_LIBS@
 
 ffmpeg2shm_SOURCES=ffmpeg2shm.c
-ffmpeg2shm_LDADD=@LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@
+ffmpeg2shm_LDADD=@LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@ @LIBAVUTIL_LIBS@
