--- a/gnome/po/Makefile.am
+++ b/gnome/po/Makefile.am
@@ -4,26 +4,26 @@ DOMAIN=sflphone-client-gnome
 
 
 POFILES=\
-	 fr/fr.po \
-	 es/es.po \
-	 de/de.po \
-     zh_CN/zh_CN.po \
-     zh_HK/zh_HK.po \
-	 ru/ru.po \
-	 it/it.po \
-	 pt_BR/pt_BR.po \
-	 da/da.po
+	 fr.po \
+	 es.po \
+	 de.po \
+     zh_CN.po \
+     zh_HK.po \
+	 ru.po \
+	 it.po \
+	 pt_BR.po \
+	 da.po
 
 MOFILES=\
-	 fr/fr.mo \
-	 es/es.mo \
-	 de/de.mo \
-     zh_CN/zh_CN.mo \
-     zh_HK/zh_HK.mo \
-	 ru/ru.mo \
-	 it/it.mo \
-	 pt_BR/pt_BR.mo \
-	 da/da.mo
+	 fr.mo \
+	 es.mo \
+	 de.mo \
+     zh_CN.mo \
+     zh_HK.mo \
+	 ru.mo \
+	 it.mo \
+	 pt_BR.mo \
+	 da.mo
 
 MSGFMT=msgfmt
 
@@ -39,10 +39,10 @@ SUFFIXES=.po .mo
 	$(MSGFMT) -o $@ $<
 
 install-data-local: $(MOFILES)
-	@catalogs='$(MOFILES)'; \
+	catalogs='$(MOFILES)'; \
 	for i in $$catalogs; do \
 		destdir=$(locale_installdir); \
-		lang=`echo $$i | cut -d / -f1`; \
+		lang=`echo $$i | sed 's/\.mo//'`; \
 		$(mkinstalldirs) $(locale_installdir)/$$lang/LC_MESSAGES; \
 		$(INSTALL_DATA) $$i $(locale_installdir)/$$lang/LC_MESSAGES/$(DOMAIN).mo; \
 		echo "installing $$i as $(locale_installdir)/$$lang/LC_MESSAGES/$(DOMAIN).mo"; \
