* #7132: daemon: audiortp files -> lowercase

--- a/daemon/src/audio/audiortp/Makefile.am
+++ b/daemon/src/audio/audiortp/Makefile.am
@@ -3,20 +3,18 @@ include $(top_srcdir)/globals.mak
 noinst_LTLIBRARIES = libaudiortp.la
 
 libaudiortp_la_SOURCES = \
-		AudioRtpSession.cpp \
-		AudioSymmetricRtpSession.cpp \
-		AudioRtpRecordHandler.cpp \
-		AudioRtpFactory.cpp \
-		AudioZrtpSession.cpp \
-		ZrtpSessionCallback.cpp \
-		AudioSrtpSession.cpp
-
-noinst_HEADERS = \
-		AudioRtpSession.h \
-		AudioRtpRecordHandler.h \
-		AudioRtpFactory.h \
-		AudioSymmetricRtpSession.h \
-		AudioZrtpSession.h \
-		ZrtpSessionCallback.h \
-		AudioSrtpSession.h 
+		audio_rtp_session.cpp \
+		audio_symmetric_rtp_session.cpp \
+		audio_rtp_record_handler.cpp \
+		audio_rtp_factory.cpp \
+		audio_zrtp_session.cpp \
+		zrtp_session_callback.cpp \
+		audio_srtp_session.cpp \
+		audio_rtp_session.h \
+		audio_rtp_record_handler.h \
+		audio_rtp_factory.h \
+		audio_symmetric_rtp_session.h \
+		audio_zrtp_session.h \
+		zrtp_session_callback.h \
+		audio_srtp_session.h 
 
