* #7132: InstantMessaging -> instant_messaging

--- a/daemon/src/im/Makefile.am
+++ b/daemon/src/im/Makefile.am
@@ -1,8 +1,5 @@
-SUBDIRS = 
-
 include $(top_srcdir)/globals.mak
 
 noinst_LTLIBRARIES = libim.la
 
-libim_la_SOURCES = \
-	InstantMessaging.cpp InstantMessaging.h
+libim_la_SOURCES = instant_messaging.cpp instant_messaging.h
