--- a/daemon/libs/utilspp/singleton/Makefile.am
+++ b/daemon/libs/utilspp/singleton/Makefile.am
@@ -1,19 +1,6 @@
 noinst_LTLIBRARIES = libsingleton.la
 
 libsingleton_la_SOURCES = \
-	CreationUsingNew.hpp CreationUsingNew.inl \
-	LifetimeDefault.hpp LifetimeDefault.inl \
-	SingletonHolder.hpp SingletonHolder.inl 
-
-
-#pkginclude_HEADERS = \
-#	CreationStatic.hpp CreationStatic.inl \
-#	CreationUsingNew.hpp CreationUsingNew.inl \
-#	LifetimeDefault.hpp LifetimeDefault.inl \
-#	LifetimeLibrary.hpp LifetimeLibrary.inl \
-#	LifetimeWithLongevity.hpp LifetimeWithLongevity.inl \
-#	PrivateMembers.hpp PrivateMembers.inl \
-#	SingletonHolder.hpp SingletonHolder.inl 
-
-#pkgincludedir=$(includedir)/utilspp/singleton
-
+	creation_using_new.hpp creation_using_new.inl \
+	lifetime_default.hpp lifetime_default.inl \
+	singleton_holder.hpp singleton_holder.inl
