* #7303: add nightly build for oneiric

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -19,6 +19,13 @@ incoming = ~savoirfairelinux/ubuntu/natty
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-oneiric]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/oneiric
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-lucid]
 fqdn = ppa.launchpad.net
 method = ftp
@@ -37,5 +44,12 @@ allow_unsigned_uploads = 0
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/natty
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-nightly-oneiric]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/oneiric
 login = anonymous
 allow_unsigned_uploads = 0
