--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -26,6 +26,13 @@ incoming = ~savoirfairelinux/ubuntu/oneiric
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-precis]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/precise
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-lucid]
 fqdn = ppa.launchpad.net
 method = ftp
@@ -51,5 +58,12 @@ allow_unsigned_uploads = 0
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/oneiric
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-nightly-precise]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/precise
 login = anonymous
 allow_unsigned_uploads = 0
