* #7491: fixed typo in dput.conf

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -12,7 +12,7 @@ incoming = ~savoirfairelinux/ubuntu/oneiric
 login = anonymous
 allow_unsigned_uploads = 0
 
-[sflphone-precis]
+[sflphone-precise]
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/ubuntu/precise
