* #6902: fixed GTKCLUTTER_FLAGS/LIBS

--- a/gnome/src/config/Makefile.am
+++ b/gnome/src/config/Makefile.am
@@ -28,10 +28,13 @@ libconfig_la_SOURCES = \
   zrtpadvanceddialog.h
 
 libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) $(GCONF_LDFLAGS) \
-					   $(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) @CLUTTER_LIBS@
+					   $(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) \
+					   @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
 
 libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) $(GCONF_LIBS) \
-					  $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) @CLUTTER_LIBS@
+					  $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) @CLUTTER_LIBS@ \
+					  @CLUTTERGTK_LIBS@
 
 libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) $(GCONF_CFLAGS) \
-					  $(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) @CLUTTER_CFLAGS@
+					  $(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
+					  @CLUTTER_CFLAGS@ @CLUTTERGTK_CFLAGS@
