--- a/tools/build-system/launchpad/sflphone-plugins/debian/control
+++ b/tools/build-system/launchpad/sflphone-plugins/debian/control
@@ -2,7 +2,7 @@ Source: sflphone-plugins
 Maintainer: SavoirFaireLinux Inc <julien.bonjean@savoirfairelinux.com>
 Section: gnome
 Priority: optional
-Build-Depends: debhelper, libgcc1, autoconf, automake, libtool, libgtk-3-dev, libebook1.2-dev, libedataserver1.2-dev
+Build-Depends: debhelper, libgcc1, autoconf, automake, libtool, libgconf2-dev, libgtk-3-dev, libebook1.2-dev, libedataserver1.2-dev
 Standards-Version: 3.7.3
 
 Package: sflphone-plugins
