--- a/daemon/src/history/Makefile.am
+++ b/daemon/src/history/Makefile.am
@@ -1,11 +1,9 @@
 include ../../globals.mak
 
-SUBDIRS = 
-
 noinst_LTLIBRARIES = libhistory.la
 
-libhistory_la_SOURCES =         \
-    historyitem.h               \
-    historyitem.cpp             \
-    historymanager.h            \
-    historymanager.cpp
+libhistory_la_SOURCES = \
+    historyitem.h       \
+    historyitem.cpp     \
+    history.h           \
+    history.cpp
